.k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
  name: ingress
  namespace: voidchan-ns
spec:
  tls:
  - hosts:
    - cdn.voidchan.gg
    secretName: voidchan-tls
  rules:
  - host: cdn.voidchan.gg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voidchan-api-service
            port:
              number: 3000
